--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
+    "deploy": "gh-pages -d dist"
+    },
   "homepage": "https://zaouaoua.github.io/-Re-Master.git",
   "dependencies": {
     "react": "^18.2.0",
